# drift-triage-copilot

./: .env.example  .gitignore  docker-compose.yml
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/agent_service/: Dockerfile  checkpoints.py  graph.py  queue_client.py  schemas.py  webhook_server.py
backend/agent_service/nodes/: action.py  comms.py  triage.py
backend/agent_service/prompts/: action.txt  comms.txt  triage.txt
backend/model_service/: Dockerfile  app.py  drift.py  predictor.py  registry_gate.py  schemas.py  train.py
backend/tests/: test_agent_trajectories.py  test_model_fidelity.py
backend/worker/: Dockerfile  worker.py
backend/worker/tasks/: replay.py  retrain.py  rollback.py
docs/: ARCH.md  DECISIONS.md  RUNBOOK.md
frontend/dashboard/: Dockerfile  app.py
