[project]
name = "drift-triage-copilot"
version = "0.1.0"
description = "A self-healing MLOps stack with drift detection and agentic triage"
requires-python = ">=3.11"

dependencies = [
    # ── Data & ML ──────────────────────────────────────────────────────────────
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "joblib>=1.3.0",
    "scipy>=1.12.0",           # chi² test for categorical drift

    # ── MLflow ─────────────────────────────────────────────────────────────────
    "mlflow>=2.11.0",

    # ── FastAPI (model service) ────────────────────────────────────────────────
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",           # async HTTP client for webhook calls

    # ── LangGraph (agent service) ──────────────────────────────────────────────
    "langgraph>=0.1.0",
    "langchain>=0.1.0",
    "langchain-anthropic>=0.1.0",

    # ── Postgres (agent checkpoints) ──────────────────────────────────────────
    "psycopg2-binary>=2.9.0",
    "sqlalchemy>=2.0.0",

    # ── Redis (job queue) ─────────────────────────────────────────────────────
    "redis>=5.0.0",
    "rq>=1.16.0",              # Redis Queue — simple job dispatcher

    # ── Dashboard ─────────────────────────────────────────────────────────────
    "streamlit>=1.32.0",

    # ── Utilities ─────────────────────────────────────────────────────────────
    "python-dotenv>=1.0.0",    # load .env files
    "tenacity>=8.2.0",         # exponential backoff retries
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
]

[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["model_service*", "agent_service*", "worker*"]